--- a/app/src/main/res/layout/activity_business_display.xml
+++ b/app/src/main/res/layout/activity_business_display.xml
@@ -18,7 +18,7 @@
             <View
                 android:id="@+id/viewTop"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="45dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
@@ -42,12 +42,12 @@
                 android:paddingRight="14dp"
                 android:paddingBottom="8dp"
                 app:layout_constraintLeft_toRightOf="@id/back_bt"
-                app:layout_constraintRight_toLeftOf="@id/search_bt"
+                app:layout_constraintRight_toLeftOf="@id/share_bt"
                 app:layout_constraintTop_toBottomOf="@id/viewTop">
 
                 <TextView
                     android:id="@+id/search_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:drawableLeft="@drawable/search"
@@ -67,7 +67,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-                android:id="@+id/search_bt"
+                android:id="@+id/share_bt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
@@ -90,6 +90,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                app:tabMaxWidth="200dp"
+                app:tabMinWidth="50dp"
+                app:tabPaddingStart="5dp"
+                app:tabPaddingEnd="5dp"
+                android:layout_marginLeft="10dp"
                 app:tabIndicator="@drawable/shape_tab_indicator_2"
                 app:tabIndicatorColor="@color/color0E76E2"
                 app:tabIndicatorFullWidth="false"
@@ -107,7 +112,8 @@
                 android:layout_gravity="center_vertical"
                 android:background="@color/white"
                 android:paddingRight="14dp"
-                android:src="@drawable/more_left_point" />
+                android:paddingLeft="14dp"
+                android:src="@drawable/more_down" />
 
         </LinearLayout>
 
