--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -96,7 +96,9 @@
                 android:layout_marginLeft="23dp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="20sp"
+                android:text="ssssssss"
+                android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/banner" />
 
@@ -243,14 +245,14 @@
 
             <com.qmuiteam.qmui.alpha.QMUIAlphaButton
                 android:id="@+id/zan_bt"
-                android:layout_width="wrap_content"
-                android:layout_height="33dp"
+                android:layout_width="70dp"
+                android:layout_height="23dp"
                 android:layout_marginRight="11dp"
                 android:background="@drawable/shape_yuanjiao_50_a0a0a0_ffffff"
                 android:drawableLeft="@drawable/ungreat_xiao"
                 android:paddingLeft="13dp"
                 android:paddingRight="10dp"
-                android:text="0"
+                android:text=""
                 android:textSize="14sp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@id/reliable_" />
@@ -396,6 +398,9 @@
                     android:id="@+id/real_view_rv"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginRight="21dp"
+                    android:layout_marginBottom="24dp"
                     app:layout_constraintTop_toBottomOf="@id/real_view_bt"
                     tools:layout_editor_absoluteX="16dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -405,6 +410,7 @@
                 android:id="@+id/liner4_"
                 android:layout_width="match_parent"
                 android:layout_height="7dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/colorF5F5F5"
                 app:layout_constraintTop_toBottomOf="@id/real_view_cl" />
 
@@ -437,7 +443,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/certifications_rv"
                 android:layout_width="match_parent"
-                android:layout_height="189dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp"
+                android:paddingBottom="20dp"
                 app:layout_constraintTop_toBottomOf="@id/certifications_bt" />
 
             <View
@@ -575,7 +583,6 @@
         android:paddingLeft="20dp"
         android:textColor="@color/white"
         android:textSize="17sp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
