--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <!--主页面-->
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,42 +23,44 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/viewTop">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/viewTop">-->
 
-            <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
+            <ImageView
                 android:id="@+id/personal_abt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="29dp"
+                android:layout_height="17dp"
                 android:layout_marginLeft="22dp"
-                android:layout_marginTop="43dp"
-                android:background="@null"
-                android:src="@drawable/more_line"
+                android:layout_marginTop="33dp"
+                android:scaleType="fitCenter"
+                android:background="@drawable/more_line"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/title_iv"
-                android:layout_width="110dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="60dp"
+                android:layout_width="126dp"
+                android:layout_height="54dp"
+                android:layout_marginTop="30dp"
+                android:layout_gravity="center"
                 android:src="@drawable/shou_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toTopOf="@id/personal_abt" />
 
             <LinearLayout
                 android:id="@+id/search_ll"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="17dp"
                 android:layout_marginTop="19dp"
                 android:layout_marginRight="17dp"
                 android:background="@drawable/shape_zhijiao_line_000000"
                 android:orientation="horizontal"
-                android:padding="17dp"
+                android:paddingLeft="17dp"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
+                android:paddingRight="17dp"
                 app:layout_constraintTop_toBottomOf="@id/title_iv">
 
                 <TextView
@@ -65,11 +68,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
+                    android:textColor="@color/color96545454"
+                    android:textSize="19sp"
                     android:text="@string/search_title" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:src="@drawable/search" />
             </LinearLayout>
 
@@ -77,7 +83,7 @@
                 android:id="@+id/tab_ll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="18dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/search_ll">
@@ -90,14 +96,19 @@
                     app:layout_constraintRight_toLeftOf="@id/more_tab_bt"
                     app:layout_constraintTop_toTopOf="parent"
                     app:tabGravity="center"
+                    android:layout_marginLeft="15dp"
+                    app:tabMaxWidth="200dp"
+                    app:tabMinWidth="50dp"
+                    app:tabPaddingStart="5dp"
+                    app:tabPaddingEnd="5dp"
                     app:tabIndicator="@drawable/shape_tab_indicator_2"
                     app:tabIndicatorColor="@color/colorF03225"
                     app:tabIndicatorFullWidth="false"
                     app:tabMode="scrollable"
                     app:tabRippleColor="@color/transparent"
                     app:tabSelectedTextColor="@color/black"
-                    app:tabTextAppearance="@style/TabSize17"
-                    app:tabTextColor="@color/color383838" />
+                    app:tabTextAppearance="@style/TabSize18"
+                    app:tabTextColor="#666666" />
 
                 <View
                     android:layout_width="9dp"
@@ -114,6 +125,7 @@
                     android:layout_gravity="center_vertical"
                     android:background="@color/white"
                     android:paddingRight="14dp"
+                    android:paddingLeft="10dp"
                     android:src="@drawable/more_left_point"
                     app:layout_constraintBottom_toBottomOf="@id/tab_layout"
                     app:layout_constraintRight_toRightOf="parent"
@@ -125,11 +137,12 @@
                 android:id="@+id/main_vp2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tab_ll" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+    </LinearLayout>
     <!--左边抽屉菜单-->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/left_nv"
