--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorEEEEEE"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <View
@@ -22,17 +24,13 @@
             android:layout_width="351dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:background="@drawable/shape_blue5"
-            android:paddingLeft="14dp"
-            android:paddingTop="8dp"
-            android:paddingRight="14dp"
-            android:paddingBottom="8dp"
+            android:background="@drawable/shape_white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/viewTop">
 
             <EditText
                 android:id="@+id/search_et"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:drawableLeft="@drawable/search"
@@ -41,6 +39,10 @@
                 android:hint="@string/search_title"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
                 android:maxLines="1"
                 android:textColor="#333333"
                 android:textColorHint="#B3B3B3"
@@ -52,7 +54,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.qmuiteam.qmui.alpha.QMUIAlphaButton
-            android:id="@+id/search_bt"
+            android:id="@+id/share_bt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -71,7 +73,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/sreach_cl"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bar_cl">
@@ -128,10 +130,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_re"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bar_cl" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
