--- a/app/src/main/res/layout/nav_my_head.xml
+++ b/app/src/main/res/layout/nav_my_head.xml
@@ -5,14 +5,25 @@
     android:layout_height="match_parent"
     android:paddingBottom="67dp">
 
-    <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
+<!--    <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton-->
+<!--        android:id="@+id/personal_left_abt"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="22dp"-->
+<!--        android:layout_marginTop="43dp"-->
+<!--        android:background="@null"-->
+<!--        android:src="@drawable/more_line"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <ImageView
         android:id="@+id/personal_left_abt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="29dp"
+        android:layout_height="17dp"
         android:layout_marginLeft="22dp"
-        android:layout_marginTop="43dp"
-        android:background="@null"
-        android:src="@drawable/more_line"
+        android:layout_marginTop="53dp"
+        android:scaleType="fitCenter"
+        android:background="@drawable/more_line"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
