--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="translucent_white">#ddd</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="black_ss">#42434C</color>
     <!--透明色-->
     <color name="transparent">#00000000</color>
     <color name="color96545454">#96545454</color>
