--- a/app/src/main/res/layout/activity_call_records.xml
+++ b/app/src/main/res/layout/activity_call_records.xml
@@ -3,38 +3,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout
-        android:id="@+id/head_ll"
+    <RelativeLayout
+        android:id="@+id/rl_head"
         android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:layout_marginLeft="20dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:id="@+id/head_ll"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginLeft="20dp"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/left_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="总浏览量：3567"
+                android:textSize="13sp" />
 
+            <TextView
+                android:id="@+id/right_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="今日浏览量：3567"
+                android:textSize="13sp" />
+        </LinearLayout>
         <TextView
-            android:id="@+id/left_tv"
-            android:layout_width="wrap_content"
+            android:id="@+id/number_tv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="总浏览量：3567"
-            android:textSize="13sp" />
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingLeft="21dp"
+            android:textSize="14sp"
+            android:textColor="#646464"
+            android:text=""
+            android:background="@color/line_gray"
+            />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/right_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="总浏览量：3567"
-            android:textSize="13sp" />
-    </LinearLayout>
-
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_gray"
+        app:layout_constraintTop_toBottomOf="@id/rl_head"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/head_ll" />
+        app:layout_constraintTop_toBottomOf="@id/line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
