--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -405,14 +405,19 @@
                     tools:layout_editor_absoluteX="16dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/certifications_cl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/real_view_cl"
+            app:layout_scrollFlags="scroll">
             <View
                 android:id="@+id/liner4_"
                 android:layout_width="match_parent"
                 android:layout_height="7dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorF5F5F5"
-                app:layout_constraintTop_toBottomOf="@id/real_view_cl" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/certifications_"
@@ -448,12 +453,14 @@
                 android:paddingBottom="20dp"
                 app:layout_constraintTop_toBottomOf="@id/certifications_bt" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
             <View
                 android:id="@+id/liner5_"
                 android:layout_width="match_parent"
                 android:layout_height="7dp"
                 android:background="@color/colorF5F5F5"
-                app:layout_constraintTop_toBottomOf="@id/certifications_rv" />
+                app:layout_constraintTop_toBottomOf="@id/certifications_cl" />
 
             <TextView
                 android:id="@+id/contact_details_"
