--- a/app/src/main/res/layout/activity_prod_cata.xml
+++ b/app/src/main/res/layout/activity_prod_cata.xml
@@ -1,110 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <include
         layout="@layout/view_simple_topbar_white"/>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bar_cl"
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/bar_cl"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/white"-->
+<!--        android:paddingBottom="3dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <View-->
+<!--            android:id="@+id/viewTop"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="25dp"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/toolbar_iv_back"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:padding="14dp"-->
+<!--            android:src="@drawable/back"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/viewTop" />-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="产品图册"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="18sp"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/toolbar_iv_back"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@id/toolbar_iv_back" />-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/more_"-->
+<!--            android:layout_width="87dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:layout_marginRight="7dp"-->
+<!--            android:background="@drawable/shape_yuanjiao_20_a0a0a0_ffffff"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/toolbar_iv_back"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@id/toolbar_iv_back">-->
+
+<!--            <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton-->
+<!--                android:id="@+id/share_bar_bt"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:layout_weight="1"-->
+<!--                android:src="@drawable/dian_black"-->
+<!--                app:layout_constraintRight_toRightOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--            <View-->
+<!--                android:layout_width="1dp"-->
+<!--                android:layout_height="19dp"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:background="@color/colorCCCCCC" />-->
+
+<!--            <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton-->
+<!--                android:id="@+id/back_bar_bt"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="13dp"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:layout_weight="1"-->
+<!--                android:src="@drawable/close"-->
+<!--                app:layout_constraintRight_toRightOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+<!--        </LinearLayout>-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+    <LinearLayout
+        android:id="@+id/ll_image"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="3dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMaxWidth="200dp"
+            app:tabMinWidth="50dp"
+            app:tabPaddingStart="5dp"
+            app:tabPaddingEnd="5dp"
+            app:layout_constraintTop_toBottomOf="@id/bar_cl"
+            app:tabIndicator="@drawable/shape_tab_indicator_2"
+            app:tabIndicatorColor="@color/black"
+            app:tabIndicatorFullWidth="false"
+            app:tabMode="scrollable"
+            app:tabRippleColor="@color/transparent"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextAppearance="@style/TabSize18"
+            app:tabTextColor="@color/color383838" />
 
         <View
-            android:id="@+id/viewTop"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="1dp"
+            android:background="@color/colorDCDCDC"
+            app:layout_constraintTop_toBottomOf="@id/tab_layout" />
 
-        <ImageView
-            android:id="@+id/toolbar_iv_back"
-            android:layout_width="wrap_content"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/main_vp2"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="14dp"
-            android:src="@drawable/back"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewTop" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+    </LinearLayout>
+    <include
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="产品图册"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar_iv_back"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/toolbar_iv_back" />
-
-        <LinearLayout
-            android:id="@+id/more_"
-            android:layout_width="87dp"
-            android:layout_height="32dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/shape_yuanjiao_20_a0a0a0_ffffff"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar_iv_back"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/toolbar_iv_back">
-
-            <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-                android:id="@+id/share_bar_bt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:src="@drawable/dian_black"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="19dp"
-                android:layout_gravity="center_vertical"
-                android:background="@color/colorCCCCCC" />
-
-            <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-                android:id="@+id/back_bar_bt"
-                android:layout_width="wrap_content"
-                android:layout_height="13dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:src="@drawable/close"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/bar_cl"
-        app:tabIndicator="@drawable/shape_tab_indicator_2"
-        app:tabIndicatorColor="@color/black"
-        app:tabIndicatorFullWidth="false"
-        app:tabMode="scrollable"
-        app:tabRippleColor="@color/transparent"
-        app:tabSelectedTextColor="@color/black"
-        app:tabTextAppearance="@style/TabSize18"
-        app:tabTextColor="@color/color383838" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorDCDCDC"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/main_vp2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        layout="@layout/view_empty"/>
+</LinearLayout>
