--- a/app/src/main/res/layout/activity_store_manage.xml
+++ b/app/src/main/res/layout/activity_store_manage.xml
@@ -5,60 +5,63 @@
     android:layout_height="match_parent"
     android:background="@color/colorF2F2F2">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/head_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
-        <ImageView
+        <com.yiweiyi.www.view.CircleImageView
             android:id="@+id/head_img"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="44dp"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/no_login"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/compe_name_tv"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="21dp"
-            android:text="鑫京泰线缆有限公司"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toRightOf="@id/head_img"
-            app:layout_constraintTop_toTopOf="@id/head_img" />
+            android:layout_gravity="center_vertical">
+            <TextView
+                android:id="@+id/compe_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp"
+                android:text="鑫京泰线缆有限公司"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/area_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="21dp"
-            android:layout_marginTop="14dp"
-            android:text="北京"
-            android:textColor="@color/color646464"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toRightOf="@id/head_img"
-            app:layout_constraintTop_toBottomOf="@id/compe_name_tv" />
+            <TextView
+                android:id="@+id/area_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="5dp"
+                android:text="北京"
+                android:textColor="@color/color646464"
+                android:textSize="14sp"
+                android:layout_below="@id/compe_name_tv"/>
 
-        <TextView
-            android:id="@+id/name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="21dp"
-            android:layout_marginTop="14dp"
-            android:text="曹绍翔"
-            android:textColor="@color/color646464"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toRightOf="@id/area_tv"
-            app:layout_constraintTop_toBottomOf="@id/compe_name_tv" />
+            <TextView
+                android:id="@+id/name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="5dp"
+                android:text="曹绍翔"
+                android:textColor="@color/color646464"
+                android:textSize="14sp"
+                android:layout_below="@id/compe_name_tv"
+                android:layout_toRightOf="@id/area_tv"/>
+
+        </RelativeLayout>
 
         <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
             android:id="@+id/more_bt"
@@ -69,7 +72,7 @@
             app:layout_constraintBottom_toBottomOf="@id/head_img"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/head_img" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
