--- a/app/src/main/res/layout/item_phone_list.xml
+++ b/app/src/main/res/layout/item_phone_list.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.d.lib.slidelayout.SlideLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/sl_Item"
+android:layout_width="match_parent"
+android:layout_height="@dimen/phone_item_height">
+<!-- Content view -->
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
         android:id="@+id/delete_"
         android:layout_width="wrap_content"
@@ -12,36 +16,35 @@
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:src="@drawable/phone_delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+       />
 
     <TextView
         android:id="@+id/phone_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="15710028432"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/delete_"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
-        android:id="@+id/delete_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginLeft="19dp"
-        android:background="@color/colorFD3B31"
-        android:text="@string/delete"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/phone_tv"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorE5E5E5"
-        app:layout_constraintBottom_toBottomOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp"
+        android:textColor="@color/black_26"
+        android:text="15710028432"
+         />
+</LinearLayout>
+
+<!-- Slide view -->
+<LinearLayout
+    android:id="@+id/ll_Del"
+    android:layout_width="80dp"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@color/red"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:text="删除"/>
+</LinearLayout>
+
+</com.d.lib.slidelayout.SlideLayout>
+
