--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/white">
     <include
-        layout="@layout/view_simple_topbar_white"/>
+        layout="@layout/view_simple_topbar_white"
+        android:visibility="gone"/>
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
@@ -97,7 +99,7 @@
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:text="ssssssss"
+                android:text=""
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/banner" />
@@ -497,7 +499,7 @@
         android:alpha="0.0"
         android:background="@color/white"
         android:paddingBottom="3dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_below="@id/scroll">
 
         <View
             android:id="@+id/viewTop"
@@ -555,30 +557,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_mini_program"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" >
-        <ImageView
-            android:id="@+id/iv_mini_program"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginLeft="30dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_marginLeft="30dp"
-            android:text="扫码进入小程序\n获取更多厂家信息"/>
-    </LinearLayout>
     <com.qmuiteam.qmui.alpha.QMUIAlphaButton
         android:id="@+id/call_bt"
         android:layout_width="179dp"
@@ -589,7 +567,15 @@
         android:paddingLeft="20dp"
         android:textColor="@color/white"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"/>
+    <ImageView
+        android:id="@+id/iv_mini_program"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:gravity="center_vertical"
+        android:visibility="gone"
+       android:src="@mipmap/ic_launcher">
+    </ImageView>
+</RelativeLayout>
