--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,6 +44,7 @@
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
                 android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="#333333"
                 android:textColorHint="#B3B3B3"
                 android:textSize="13dp"
@@ -87,6 +88,7 @@
             app:layout_behavior=".utils.FlingBehavior">
 
             <LinearLayout
+                android:id="@+id/ll_search_history"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -126,14 +128,24 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_re"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bar_cl" />
+        app:layout_constraintTop_toBottomOf="@id/bar_cl">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_re"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone"
+            />
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+        </WebView>
+    </RelativeLayout>
 
 </LinearLayout>
