--- a/app/src/main/res/layout/foot_phone_list.xml
+++ b/app/src/main/res/layout/foot_phone_list.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_AddPhone"
     android:layout_width="match_parent"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
+    android:orientation="horizontal"
     android:layout_height="wrap_content">
 
     <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-        android:id="@+id/add_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="19dp"
         android:src="@drawable/phone_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+       />
 
     <TextView
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/add_phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/add_"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:hint="@string/add_phone" />
+</LinearLayout>
