--- a/app/src/main/res/layout/item_phone_list.xml
+++ b/app/src/main/res/layout/item_phone_list.xml
@@ -2,7 +2,8 @@
 <com.d.lib.slidelayout.SlideLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/sl_Item"
 android:layout_width="match_parent"
-android:layout_height="@dimen/phone_item_height">
+android:layout_height="@dimen/phone_item_height"
+    android:background="@color/white">
 <!-- Content view -->
 <LinearLayout
     android:layout_width="match_parent"
@@ -24,7 +25,7 @@ android:layout_height="@dimen/phone_item_height">
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_marginLeft="10dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textColor="@color/black_26"
         android:text="15710028432"
          />
