--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,9 +44,10 @@
 
     <LinearLayout
         android:id="@+id/phone_ll"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="36dp"
+        android:layout_marginRight="36dp"
         android:layout_marginTop="64dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
