--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -28,51 +28,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-            <LinearLayout
-                android:layout_width="87dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="7dp"
-                android:background="@drawable/shape_yuanjiao_20_96545454"
-                android:orientation="horizontal"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-                    android:id="@+id/share_bt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:src="@drawable/dian_black"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="19dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/colorCCCCCC" />
-                <LinearLayout
-                    android:id="@+id/back_bt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:layout_weight="1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" >
-                    <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/close"
-                        />
-                </LinearLayout>
-
-            </LinearLayout>
-
             <TextView
                 android:id="@+id/index_tv"
                 android:layout_width="wrap_content"
@@ -86,6 +41,7 @@
                 android:paddingEnd="12dp"
                 android:paddingBottom="4dp"
                 android:text="0/0"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="@id/banner"
@@ -256,6 +212,7 @@
                 android:paddingRight="10dp"
                 android:text=""
                 android:textSize="14sp"
+                android:textColor="@color/black_26"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@id/reliable_" />
 
@@ -491,7 +448,51 @@
 
 
     </androidx.core.widget.NestedScrollView>
+    <LinearLayout
+        android:layout_width="87dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="7dp"
+        android:background="@drawable/shape_yuanjiao_20_96545454"
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
+            android:id="@+id/share_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/dian_black_white"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="19dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorCCCCCC" />
+        <LinearLayout
+            android:id="@+id/back_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_weight="1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+            <ImageView
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/close_white"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bar_cl"
         android:layout_width="match_parent"
