--- a/app/src/main/res/layout/activity_likelist.xml
+++ b/app/src/main/res/layout/activity_likelist.xml
@@ -8,12 +8,12 @@
         android:id="@+id/number_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="21dp"
         android:textSize="14sp"
         android:textColor="#646464"
-        android:text=""
+        android:text="5热呢的很赞"
         android:background="@color/line_gray"
         />
 
