--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,22 +27,30 @@
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
 <!--            app:layout_constraintTop_toBottomOf="@id/viewTop">-->
-
-            <ImageView
+            <LinearLayout
                 android:id="@+id/personal_abt"
-                android:layout_width="29dp"
-                android:layout_height="17dp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="33dp"
-                android:scaleType="fitCenter"
-                android:background="@drawable/more_line"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+               android:paddingRight="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="33dp">
+                <ImageView
+
+                    android:layout_width="29dp"
+                    android:layout_height="17dp"
+                    android:scaleType="fitCenter"
+                    android:background="@drawable/more_line"
+                    />
+
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/title_iv"
-                android:layout_width="126dp"
-                android:layout_height="54dp"
+                android:layout_width="165dp"
+                android:layout_height="72dp"
                 android:layout_marginTop="30dp"
                 android:layout_gravity="center"
                 android:src="@drawable/shou_title"
@@ -128,10 +136,8 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/main_vp2"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tab_ll" />
+                android:layout_height="match_parent"
+               />
 
 <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
     </LinearLayout>
