--- a/app/src/main/res/layout/activity_verifi_code.xml
+++ b/app/src/main/res/layout/activity_verifi_code.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/toolbar_iv_back"
+        android:id="@+id/iv_back"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginLeft="10dp"
@@ -31,7 +31,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_iv_back" />
+        app:layout_constraintTop_toBottomOf="@id/iv_back" />
 
     <TextView
         android:id="@+id/verification_code_sent_to"
