--- a/app/src/main/res/layout/item_business_display.xml
+++ b/app/src/main/res/layout/item_business_display.xml
@@ -3,14 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/head_img"
-        android:layout_width="47dp"
-        android:layout_height="47dp"
+    <LinearLayout
+        android:id="@+id/ll_image"
+        android:layout_width="51dp"
+        android:layout_height="51dp"
         android:layout_marginLeft="13dp"
+        android:padding="2dp"
+        android:background="@drawable/edit_text_black"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/compe_name_tv" />
+        app:layout_constraintTop_toTopOf="@id/compe_name_tv" >
+        <ImageView
+            android:id="@+id/head_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/compe_name_tv"
@@ -20,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:textColor="@color/black"
         android:textSize="19sp"
-        app:layout_constraintLeft_toRightOf="@id/head_img"
+        app:layout_constraintLeft_toRightOf="@id/ll_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -39,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color535353"
+        android:paddingLeft="10dp"
         android:textSize="15sp"
         app:layout_constraintLeft_toRightOf="@id/principal_"
         app:layout_constraintTop_toTopOf="@id/principal_" />
@@ -47,9 +56,10 @@
         android:id="@+id/phone_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:gravity="center"
-        android:text="@string/phone_"
+        android:text="电\t\t话："
         android:textColor="@color/color535353"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@id/principal_"
@@ -61,6 +71,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:textColor="@color/color0582FA"
         android:textSize="15sp"
         android:text=""
@@ -72,6 +84,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:text="@string/more_number"
         android:textColor="@color/colorFF7D18"
         android:textSize="15sp"
@@ -83,7 +98,6 @@
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:textColor="@color/color535353"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@id/phone_"
@@ -93,7 +107,7 @@
         android:id="@+id/address_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="10dp"
         android:textColor="@color/color535353"
         android:textSize="14sp"
