--- a/app/src/main/res/layout/nav_my_head.xml
+++ b/app/src/main/res/layout/nav_my_head.xml
@@ -26,65 +26,59 @@
         android:background="@drawable/more_line"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <com.qmuiteam.qmui.widget.QMUIRadiusImageView-->
-<!--        android:id="@+id/head_img"-->
-<!--        android:layout_width="59dp"-->
-<!--        android:layout_height="59dp"-->
-<!--        android:layout_marginLeft="26dp"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:src="@drawable/no_login"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/personal_left_abt" />-->
-    <com.yiweiyi.www.view.CircleImageView
-        android:id="@+id/head_img"
-        android:layout_width="59dp"
-        android:layout_height="59dp"
-        android:layout_marginLeft="26dp"
+    <RelativeLayout
+        android:id="@+id/rl_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:src="@drawable/no_login"
+        android:layout_marginLeft="26dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/personal_left_abt" />
-
-    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
-        android:id="@+id/login_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:text="@string/login"
-        android:textSize="19sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/head_img"
-        app:layout_constraintLeft_toRightOf="@id/head_img"
-        app:layout_constraintTop_toTopOf="@id/head_img" />
-    <LinearLayout
-        android:id="@+id/ll_maininfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toRightOf="@id/head_img"
-        app:layout_constraintTop_toTopOf="@id/head_img"
-        app:layout_constraintBottom_toBottomOf="@id/head_img"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
+        app:layout_constraintTop_toBottomOf="@id/personal_left_abt">
+        <com.yiweiyi.www.view.CircleImageView
+            android:id="@+id/head_img"
+            android:layout_width="59dp"
+            android:layout_height="59dp"
+            android:src="@drawable/no_login"
             />
-        <TextView
-            android:id="@+id/change_infor_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/change_infor"
-            android:drawablePadding="5dp"
-           android:layout_marginTop="5dp"
-            android:text="@string/personal_infor"
-            android:textSize="11sp"
-             />
-    </LinearLayout>
 
+        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
+            android:id="@+id/login_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
+            android:background="@null"
+            android:text="@string/login"
+            android:textSize="19sp"
+            android:visibility="gone"
+            android:layout_toRightOf="@id/head_img"/>
+        <LinearLayout
+            android:id="@+id/ll_maininfo"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:visibility="visible"
+            android:layout_toRightOf="@id/head_img"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:text="登录"/>
+            <TextView
+                android:id="@+id/change_infor_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/change_infor"
+                android:drawablePadding="5dp"
+                android:padding="5dp"
+                android:text="@string/personal_infor"
+                android:textSize="11sp"
+                />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,7 +86,7 @@
         android:layout_marginTop="40dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/head_img">
+        app:layout_constraintTop_toBottomOf="@id/rl_info">
 
         <com.qmuiteam.qmui.alpha.QMUIAlphaButton
             android:id="@+id/store_management"
