--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,13 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <com.youth.banner.Banner
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="242dp"
                 android:background="@color/color666666"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="1dp" />
 
             <TextView
                 android:id="@+id/index_tv"
@@ -408,6 +409,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
                 android:paddingBottom="20dp"
                 app:layout_constraintTop_toBottomOf="@id/certifications_bt" />
 
@@ -448,7 +450,24 @@
 
 
     </androidx.core.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/top_title"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:paddingTop="30dp"
+        android:text=""
+        android:gravity="center_horizontal"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:background="@color/white"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        />
+
     <LinearLayout
+        android:id="@+id/ll_top_share"
         android:layout_width="87dp"
         android:layout_height="32dp"
         android:layout_marginTop="25dp"
@@ -493,6 +512,7 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bar_cl"
         android:layout_width="match_parent"
