--- a/app/src/main/res/layout/activity_verifi_code.xml
+++ b/app/src/main/res/layout/activity_verifi_code.xml
@@ -18,6 +18,7 @@
         android:layout_marginLeft="10dp"
         android:padding="10dp"
         android:src="@drawable/close"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewTop" />
 
